<resources>
    <string name="app_name">Lauryl</string>
    <string name="app_tag_txt">QUALITY WORK AT PERFECT TIME</string>
    <string name="app_have_account_txt">Have an Account?</string>
    <string name="login_txt">Login</string>
    <string name="register_txt">Register</string>
    <string name="name_txt">Name</string>
    <string name="frst_nme_txt">First Name</string>
    <string name="last_nme_txt">Last Name</string>
    <string name="mbl_num_txt">Mobile Number</string>
    <string name="pswrd_txt">Password</string>
    <string name="cnf_pswrd_txt">Confirm Password</string>
    <string name="enter_psrd_num_txt">Enter password</string>
    <string name="enter_cnf_psrd_num_txt">Enter confirm password</string>
    <string name="cnf_txt">Confirm</string>
    <string name="register_hdng_txt">Please enter your information</string>
    <string name="login_also_txt">You also login with</string>
    <string name="forgot_pswrd_txt"><u>Forgot Password?</u></string>
    <string name="reset_pswrd_txt">Reset Password?</string>
    <string name="reset_pswrd_hdng_txt">Reset Password</string>
    <string name="skip_txt">Skip</string>
    <string name="verify_txt">VERIFY</string>
    <string name="search_txt">Search Services</string>
    <string name="home_hdng_txt"></string>
    <string name="loc_hdng_txt">Your Location</string>
    <string name="loc_chnge_hdng_txt">CHANGE</string>
    <string name="top_svrc_hdng_txt">Top Services</string>
    <string name="view_all_hdng_txt">VIEW ALL</string>
    <string name="wash_fold_txt">Wash &amp; Fold</string>
    <string name="wash_iron_txt">Wash &amp; Iron</string>
    <string name="dry_clean_txt">Dry Clean</string>
    <string name="send_txt">Send</string>
    <string name="reset_txt">RESET</string>
    <string name="primium_wash_txt">Premium Wash</string>
    <string name="choose_clothes_txt">Choose your service</string>
    <string name="didnt_rcv_otp_txt">Didn\'t receive OTP?</string>
    <string name="send_otp_again_txt">Send Again?</string>
    <string name="code_verify_txt">Verification Code</string>
    <string name="mbl_valid_num_txt">Please Enter a Valid Mobile Number</string>
    <string name="mbl_valid_pswrd_txt">Please enter the Password</string>
    <string name="grant_type_txt">password</string>
    <string name="versatile_user_name_txt">lauryl</string>
    <string name="versatile_pswrd_txt">praveen22</string>
    <string name="login_success_hdng_txt">Login Success</string>
    <string name="login_fail_hdng_txt">Login Error</string>
    <string name="otp_txt">OTP has been sent to </string>
    <string name="forgt_otp_txt">Enter your registered mobile\nnumber to get an OTP</string>
    <string name="vrfy_mbl_num_txt">Verify Mobile Number</string>
    <string name="email_adrs_txt">Enter the email address associated with your account</string>
    <string name="otp_adrs_txt">We will email you an OTP to reset your password</string>
    <string name="choose_clothes_sub_txt">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed dium nonummy nibh euismod tincidunt ut</string>
    <string name="schedule_pckup_txt">Pickup</string>
    <string name="my_orders_txt">My Orders</string>
    <string name="schedule_pckup_sub_txt">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed dium nonummy nibh euismod incidunt ut</string>
    <string name="top_washing_facilities_txt">You relax we take care</string>
    <string name="top_washing_facilities_sub_txt">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed dium nonummy nibh euismod incidunt ut</string>
    <string name="on_time_delivery_txt">Get On-Time Delivery</string>
    <string name="on_time_delivery_sub_txt">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed dium nonummy nibh euismod incidunt ut</string>
    <string name="server_txt">Server error</string>
    <string name="login_success_txt">Login Successful</string>
    <string name="server_error_txt">Server Error</string>
    <string name="internet_error_txt">Check internet connection</string>
    <string name="login_error">Incorrect Username or Password</string>
    <string name="home_txt">Lauryl</string>
    <string name="orders_txt">My Orders</string>
    <string name="order_histry_txt">Order Details</string>
    <string name="shedule_pck_up_txt">Pickup</string>
    <string name="payment_txt">Payment</string>
    <string name="profile_txt">Profile</string>
    <string name="plz_login_txt">Please login</string>
    <string name="plz_reg_txt">Please provide your details</string>
    <string name="awaiting_pckup_txt">Awaiting Pickup</string>
    <string name="awaiting_dlvry_txt">Awaiting Delivery</string>
    <string name="completed_txt">Completed</string>
    <string name="prfrd_time_txt">Your Preferred time?</string>
    <string name="user_existence">User Existence</string>
    <string name="user_exist_disclaimer">User already exist with the phone number</string>
    <string name="validation">Lauryl</string>
    <string name="fn_valid_txt">First Name is Mandatory</string>
    <string name="ln_valid_txt">Last Name is Mandatory</string>
    <string name="pswrd_valid_txt">Password is Mandatory</string>
    <string name="cnf_pswrd_valid_txt">Confirm Password is Mandatory</string>
    <string name="pswrd_mismatch_txt">Password mismatch</string>
    <string name="otp_validation">OTP Validation</string>
    <string name="otp_not_sent">Couldn\'t send OTP</string>
    <string name="otp_empty_disclaimer">OTP should not be empty</string>
    <string name="otp_mismatch_disclaimer">Wrong OTP entered. Please enter valid OTP!</string>
    <string name="user_register_unsuccessful">User registeration unsuccessful</string>
    <string name="user_register_successful">User registration successful</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="lauryl">Lauryl</string>
    <string name="user_login_successful">Login Successful</string>
    <string name="mbl_digit_valid_txt">Phone number should contain 10 digits</string>
    <string name="fn_alpha_valid_txt">"Invalid first name "</string>
    <string name="ln_alpha_valid_txt">Invalid last name</string>
    <string name="chose_servcs_txt">Choose Services</string>
    <string name="no_services">No services found</string>
    <string name="empty" />
    <string name="no_orders">No orders found</string>
    <string name="model_awaiting_pckup">Awaiting Pickup</string>
    <string name="model_awaiting_dlvry">Awaiting Delivery</string>
    <string name="model_awaiting_cmpltd">Completed Delivery</string>
    <string name="model_cancelled">Canceled</string>
    <string name="no_data">No data found</string>
    <string name="bank_account">Bank Account</string>
    <string name="pay_now">PAY NOW</string>
    <string name="debit_credit_card">Debit/Credit Card</string>
    <string name="net_banking">Net Banking</string>
    <string name="enter_the_upi_id">Enter the UPI ID</string>
    <string name="enter_the_upi_id_description">Enter the UPI ID description multiline</string>
    <string name="mobile_no_or_upi_id">Mobile No or UPI ID</string>
    <string name="enter_card_details">Enter Card Details</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="cvv">Cvv</string>
    <string name="save_card">Save Card</string>
    <string name="more_banks">More Banks</string>
    <string name="name_on_card">Name On Card</string>
    <string name="enter_card_number">Enter card number</string>
    <string name="todo">TODO</string>
    <string name="thanks_for_choosing_us">Thanks for choosing us!</string>
    <string name="payment_details">Payment Methods</string>
    <string name="order_id">Order Id</string>
    <string name="debited_amount">Debited Amount</string>
    <string name="pickup_date_time"><![CDATA[Pickup Date & Time]]></string>
    <string name="payment_method">Payment Method</string>
    <string name="order_status">Order Status</string>
    <string name="cancle_payment">Cancel payment</string>
    <string name="retry_payment">Retry Payment</string>
    <string name="transaction_failed">Transaction failed</string>
    <string name="reson">Reson:</string>
    <string name="transaction_id">Transaction ID:</string>
    <string name="change_password">Change Password</string>
    <string name="manage_address">Manage Address</string>
    <string name="select_address">Select Address</string>
    <string name="logout">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="pickup_process">Pickup Process</string>
    <string name="google_maps_key">AIzaSyDG-S0lW8l_svOcX3HuTOn2X_170l2mJA0</string>
    <string name="set_location">Set Location</string>
    <string name="change_address">Change Addresses</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="create_order_message">You have not selected any service.Proceed to choose services?</string>
    <string name="select_service_msg">Please select a service</string>
    <string name="order_not_created">Couldn\'t create an order</string>
    <string name="order_creation_error_after_payment">Something went wrong while placing the order.Any money deducted from bank account will be reverted soon</string>
    <string name="order_update_error">Couldn\'t update the order</string>
    <string name="order_update_success">Your order has been updated</string>
    <string name="note_the_final_amount_for_this_order_will_be_shared_at_the_time_of_delivery">Note: The final amount for this order will be shared at the time of delivery</string>
    <string name="you_can_type_here_in_case_of_any_special_instruction">You can type here in case of any special instruction</string>
    <string name="cancelled_txt">Cancelled</string>
    <string name="cancelled_on">Cancelled On</string>
    <string name="completed_on">Completed On</string>
</resources>
