<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_10"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_the_upi_id"
                android:textColor="@color/dark_grey"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:textColor="@color/grey_color"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_the_upi_id_description">

            </androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatEditText
                android:textColorHint="@color/light_grey"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_no_or_upi_id">

            </androidx.appcompat.widget.AppCompatEditText>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>