<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgPaymentLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_30"
            android:src="@drawable/payment_success_logo" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="@dimen/dp_30"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/imgPaymentLogo"
            android:id="@+id/txtThanksForChoosing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thanks_for_choosing_us"
            android:textColor="@color/dark_grey"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_marginTop="@dimen/dp_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtThanksForChoosing"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@drawable/border_box"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_5"
                android:paddingTop="@dimen/dp_10"
                android:paddingRight="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_10">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/payment_details"
                    android:textColor="@color/dark_grey">

                </androidx.appcompat.widget.AppCompatTextView>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/light_grey"></View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_5">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/order_id"></androidx.appcompat.widget.AppCompatTextView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtOrderId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/todo">

                </androidx.appcompat.widget.AppCompatTextView>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/light_grey"></View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_5">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/debited_amount"></androidx.appcompat.widget.AppCompatTextView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtDebitedAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="\u20B9 100"></androidx.appcompat.widget.AppCompatTextView>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/light_grey"></View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_5">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/pickup_date_time">

                </androidx.appcompat.widget.AppCompatTextView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtDateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/todo">

                </androidx.appcompat.widget.AppCompatTextView>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/light_grey"></View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_5">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/payment_method"></androidx.appcompat.widget.AppCompatTextView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/todo">

                </androidx.appcompat.widget.AppCompatTextView>
            </RelativeLayout>

        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@drawable/blue_bckgrnd_round_corners_bckgrnd"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/btnOderStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_30"
            android:paddingRight="@dimen/dp_30"
            android:text="@string/order_status"
            android:textColor="@color/white" />

    </RelativeLayout>
</layout>