<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.OTPVerificationScreen"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/logoLyot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            android:background="@drawable/app_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/black"
            android:text="@string/forgot_pswrd_txt" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            android:layout_marginTop="10dp"
            android:background="@drawable/forgot_pswrd_icon" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/mdlLyot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        app:layout_constraintTop_toBottomOf="@id/logoLyot"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:text="@string/forgt_otp_txt" />

        <LinearLayout
            android:id="@+id/paswrdLyot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:weightSum="1"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/grey_color">

                <EditText
                    android:id="@+id/firstNamEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/mbl_num_txt"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mdlLyot"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/send_txt"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:background="@drawable/verify_otp_bckgrnd" />

</androidx.constraintlayout.widget.ConstraintLayout>